Enhance project structure by adding server functionality with Flask; implement API endpoints for world data retrieval and saving. Update .gitignore to include Python and IDE-specific files. Introduce requirements.txt for dependency management and refactor world.json to support new item configurations and spawner mechanics.

--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,27 @@ logs/
 tmp/
 
 # Cache
-.cache/ 
+.cache/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+ENV/
+env/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Project specific
+public/data/world.json.bak
+
+# OS specific
+.DS_Store
+Thumbs.db 
