Refactor project structure to integrate Vite for development and build processes. Remove importmap script from index.html and update package.json to include Vite as a dependency. Introduce dotenv for environment variable management and enhance WorldManagerService to utilize environment variables for API configuration. Update various modules to streamline imports from Three.js and improve overall code organization. Add world.json for world data management and implement logging for environment variables in main.js.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,16 @@
   "description": "A Three.js FPS sandbox starter project",
   "main": "index.js",
   "scripts": {
-    "start": "npx live-server --port=8080 --no-browser",
-    "build": "echo 'No build step needed'"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "three": "^0.162.0"
   },
   "devDependencies": {
-    "live-server": "^1.2.2"
+    "dotenv": "^16.4.5",
+    "live-server": "^1.2.2",
+    "vite": "^5.1.6"
   }
 }
