Add deployment guide and configuration for Netlify; implement build script for world.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,9 @@
   "description": "A Three.js FPS sandbox starter project",
   "main": "index.js",
   "scripts": {
+    "copy-map": "node build.js",
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm run copy-map && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
