--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,9 @@
   publish = "dist"
   command = "npm run build"
 
+[build.environment]
+  ENVIRONMENT = "production"
+
 # Redirects for single-page application
 [[redirects]]
   from = "/*"
