--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "colyseus.js": "^0.16.12",
+    "gsap": "^3.12.7",
     "three": "^0.162.0",
     "troika-three-text": "^0.52.3"
   },
